src/test/deca/syntax/parser/valid/decl_var_multiple_no_assign.deca
// Test de parser, le deuxieme ident n'a pas de valeur
// assignée, cela est juste syntaxiquement pas mais contextuellement

{
    int x, y = 8;
}